terraform/02-platform-config/manifests/httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - argocd.${base_domain}
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
